PCS BAckup 26Dec2023/Backup-Source/objects/texcellency__DHCAcctFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines the mapping between source entity in DefinitiveHC database onto standard or custom fields in one of the supported standard objects in Salesforce.</description>
    <fields>
        <fullName>texcellency__Destination__c</fullName>
        <description>Standard or custom field name on Account object to which the value in Source field will be copied.</description>
        <inlineHelpText>Standard or custom field name on Account object to which the value in Source field will be copied.</inlineHelpText>
        <label>Destination Field</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>texcellency__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if a mapping is enabled or not. If a mapping is disabled, source value will not be copied into the destination field during a sync or copy data operation.</description>
        <inlineHelpText>Indicates if a mapping is enabled or not. If a mapping is disabled, source value will not be copied into the destination field during a sync or copy data operation.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>texcellency__Source__c</fullName>
        <description>Name of the source field in DefinitiveHC database entity.</description>
        <inlineHelpText>Name of the source field in DefinitiveHC database entity.</inlineHelpText>
        <label>Source Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DHC Account Field Mapping</label>
</CustomObject>